[gd_scene load_steps=6 format=3 uid="uid://saxa07e7imcq"]

[ext_resource type="StyleBox" uid="uid://wuh217h37o8i" path="res://themes/panel_background.tres" id="1_qes8n"]
[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="2_de0hj"]
[ext_resource type="Script" uid="uid://oguwct0bnoc" path="res://UI/save.gd" id="2_m5i0v"]
[ext_resource type="FontFile" uid="uid://b7b22c7x1x2mj" path="res://fonts/OpenMoji-color-sbix.ttf" id="4_vb6ht"]
[ext_resource type="Texture2D" uid="uid://xpaecgeeo52y" path="res://assets/icons/1F4CE.svg" id="5_1rwqb"]

[node name="SavePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_qes8n")
script = ExtResource("2_m5i0v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Emoji" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "üìé "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TitleSave" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "SAVE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="spacer" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Close" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = " ‚ùå "

[node name="space" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="UIButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "SAVE_UI_SIZE"
clip_text = true

[node name="DeleteUISave" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
theme_override_fonts/font = ExtResource("4_vb6ht")
text = " üóëÔ∏è "

[node name="space2" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "
"
fit_content = true

[node name="Title" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "SAVE_CURR_TRCK"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_de0hj")
placeholder_text = "FILE_NAME"

[node name="ActualSaveName" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_de0hj")
theme_override_colors/default_color = Color(0.546875, 0.546875, 0.546875, 1)
text = "FILE_NAME"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="SaveButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_de0hj")
text = "SAVE"
icon = ExtResource("5_1rwqb")
expand_icon = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/UIButton" to="." method="_on_ui_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/DeleteUISave" to="." method="_on_delete_ui_save_pressed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
